--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "inuit-normalize",
-  "version": "3.0.3",
-  "description": "Nicolas Gallagher’s Normalize.css used in the inuitcss framework",
+  "name": "aleut-normalize",
+  "version": "4.0.0",
+  "description": "Nicolas Gallagher’s Normalize.css used in the aleutcss framework (based on Harry Roberts inuitcss framework)",
   "main": "_generic.normalize.scss",
   "repository": {
     "type": "git",
-    "url": "https://github.com/inuitcss/generic.normalize.git"
+    "url": "https://github.com/aleutcss/generic.normalize.git"
   },
-  "author": "Harry Roberts <harry@csswizardry.com>",
-  "contributors": [{
-    "name": "Nicolas Gallagher",
-    "email": "nicolasgallagher@gmail.com"
-  }],
+  "contributors": [
+    {"name": "Marius Hauken", "url": "http://twitter.com/mhauken", "email": "hauken@netliferesearch.com"},
+    {"name": "Robin Sandborg", "url": "http://twitter.com/robrobro", "email": "robin@netliferesearch.com"},
+    {"name": "Knut Melvær", "url": "http://twitter.com/kmelve", "email": "knut@netliferesearch.com"},
+    {"name": "Harry Roberts", "email": "harry@csswizardry.com"},
+    {"name": "Nicolas Gallagher", "email": "nicolasgallagher@gmail.com"}
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/inuitcss/generic.normalize/issues"
+    "url": "https://github.com/aleutcss/generic.normalize/issues"
   },
-  "homepage": "https://github.com/inuitcss/generic.normalize",
+  "homepage": "https://github.com/aleutcss/generic.normalize",
   "keywords": [
-    "inuitcss",
+    "aleutcss",
+    "aleut",
     "oocss",
     "css",
     "normalize"
-  ]
+  ],
+  "dependencies": {
+    "aleut-defaults": "~0.3.0",
+    "aleut-mixins": "~0.3.0"
+  }
 }
