--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "normalize"
   ],
   "dependencies": {
-    "aleut-defaults": "~0.3.0",
-    "aleut-mixins": "~0.3.0"
+    "@aleut/aleut-defaults": "~0.3.0",
+    "@aleut/aleut-mixins": "~0.3.0"
   }
 }
