--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "aleut.settings.defaults": "~1.0.0",
-    "aleut.settings.mixins": "~1.0.0"
+    "aleut.tools.mixins": "~1.0.0"
 
   }
 }
